// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPackages base frontend + react 1`] = `
Object {
  "dependencies": Array [
    "core-js@3",
    "react",
    "react-dom",
    "regenerator-runtime",
  ],
  "devDependencies": Array [
    "@babel/core",
    "@babel/preset-env",
    "@babel/preset-react",
    "@lionbyte/eslint-config",
    "@types/jest",
    "@types/node",
    "@types/react",
    "@types/react-dom",
    "@types/webpack",
    "@types/webpack-bundle-analyzer",
    "@types/webpack-dev-server",
    "@types/webpack-merge",
    "autoprefixer",
    "babel-jest",
    "babel-loader",
    "clean-webpack-plugin",
    "css-loader",
    "cssnano",
    "eslint",
    "html-webpack-plugin",
    "jest",
    "jest-runner-eslint",
    "less",
    "less-loader",
    "mini-css-extract-plugin",
    "postcss-loader",
    "prettier",
    "style-loader",
    "typescript",
    "webpack",
    "webpack-bundle-analyzer",
    "webpack-cli",
    "webpack-dev-server",
    "webpack-merge",
  ],
}
`;

exports[`getPackages base frontend 1`] = `
Object {
  "dependencies": Array [
    "core-js@3",
    "regenerator-runtime",
  ],
  "devDependencies": Array [
    "@babel/core",
    "@babel/preset-env",
    "@lionbyte/eslint-config",
    "@types/jest",
    "@types/node",
    "@types/webpack",
    "@types/webpack-bundle-analyzer",
    "@types/webpack-dev-server",
    "@types/webpack-merge",
    "autoprefixer",
    "babel-jest",
    "babel-loader",
    "clean-webpack-plugin",
    "css-loader",
    "cssnano",
    "eslint",
    "html-webpack-plugin",
    "jest",
    "jest-runner-eslint",
    "less",
    "less-loader",
    "mini-css-extract-plugin",
    "postcss-loader",
    "prettier",
    "style-loader",
    "typescript",
    "webpack",
    "webpack-bundle-analyzer",
    "webpack-cli",
    "webpack-dev-server",
    "webpack-merge",
  ],
}
`;

exports[`getPackages base node + git hooks 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [
    "@lionbyte/eslint-config",
    "@types/jest",
    "@types/node",
    "eslint",
    "husky",
    "jest",
    "jest-runner-eslint",
    "lint-staged",
    "prettier",
    "typescript",
  ],
}
`;

exports[`getPackages base node 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [
    "@lionbyte/eslint-config",
    "@types/jest",
    "@types/node",
    "eslint",
    "jest",
    "jest-runner-eslint",
    "prettier",
    "typescript",
  ],
}
`;
